core/roboconf-core/src/test/resources/configurations/invalid/component-inexisting-children.graph
VM {
    installer: target;
    children: A, B, C;
}

A {
    installer: puppet;
}
